feat: minor changes on html.

--- a/new-password.html
+++ b/new-password.html
@@ -25,23 +25,19 @@
     </figure>
 
 		<div class="form__container">
-    	<h1 class="title">Create a new password</h1>
-			<p class="sub">Enter a new password for your account.</p>
+      <div class="form__header">
+				<h1 class="title">Create a new password</h1>
+				<p class="subtitle">Enter a new password for your account.</p>
+			</div>
       
 			<form class="form" action="/">
-				<div class="form__control">
-					<label class="label" for="new-password">Password</label>
-					<input class="input input__new-password" type="password" id="new-password" placeholder="********" required>
-				</div>
+				<label class="label" for="new-password">Password</label>
+				<input class="input input__new-password" type="password" id="new-password" placeholder="********" required>
 
-    		<div class="form__control">
-					<label class="label" for="re-enter-password">Re-enter password</label>
-					<input class="input input__new-password" type="password" id="re-enter-password" placeholder="********" required>
-				</div>
+				<label class="label" for="re-enter-password">Re-enter password</label>
+				<input class="input input__new-password" type="password" id="re-enter-password" placeholder="********" required>
           
-				<div class="form__control">
-					<input class="primary__btn new-password__btn" type="submit" value="Confirm new password">
-				</div>
+				<input class="primary__btn new-password__btn" type="submit" value="Confirm new password">
 			</form>
 		</div>
 	</main> 
