fix (create-account): responsive design fixed.

--- a/create-account.html
+++ b/create-account.html
@@ -21,27 +21,23 @@
 <body>
   <main class="container">
 		<div class="form__container">
-      <div class="form__header">
-				<h1 class="title">My account</h1>
-			</div>
+			<h1 class="title">My account</h1>
 
 			<form class="form" action="/">
-        <label class="label" for="name">Name</label>
-        <input class="input input__name" type="text" id="name" placeholder="Enter your name" required>
+        <div>
+          <label class="label" for="name">Name</label>
+          <input class="input input__name" type="text" id="name" placeholder="Enter your name" required>
 
-				<label class="label" for="email">Email address</label>
-				<input class="input input__email" type="email" id="email" placeholder="Enter your email" required>
+          <label class="label" for="email">Email address</label>
+          <input class="input input__email" type="email" id="email" placeholder="Enter your email" required>
 
-				<label class="label" for="password">Password</label>
-				<input class="input input__password" type="password" id="password" placeholder="********" required>
+          <label class="label" for="password">Password</label>
+          <input class="input input__password" type="password" id="password" placeholder="********" required>
+        </div>
 
 		    <input class="primary__btn create-account__btn" type="submit" value="Create account">
 			</form>
 		</div>
-
-    <!--<div class="create-account__container">
-      <button class="primary__btn create-account__btn">Create account</button>
-    </div>-->
 	</main> 
 </body>
 </html>
