feat: SVG favicon added.

--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Yard Sale - Log in</title>
+  <link rel="shortcut icon" href="./logos/favicon_yard_sale.svg">
 	<link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
