--- a/create-account.html
+++ b/create-account.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Yard Sale - Create account</title>
+  <link rel="shortcut icon" href="./logos/favicon_yard_sale.svg">
 	<link rel="stylesheet" href="./css/create-account.css">
 </head>
 <body>
