feat & fix: SVG favicon added & title changed.

--- a/my-account.html
+++ b/my-account.html
@@ -15,7 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Yard Sale - Create account</title>
+  <title>Yard Sale - My account</title>
+  <link rel="shortcut icon" href="./logos/favicon_yard_sale.svg">
 	<link rel="stylesheet" href="./css/my-account.css">
 </head>
 <body>
