--- a/new-password.html
+++ b/new-password.html
@@ -15,7 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>New password - Yard Sale</title>
+  <title>Yard Sale - New password</title>
+  <link rel="shortcut icon" href="./logos/favicon_yard_sale.svg">
 	<link rel="stylesheet" href="./css/new-password.css">
 </head>
 <body>
