--- a/password-recovery-2.html
+++ b/password-recovery-2.html
@@ -15,7 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Password recovery - Yard Sale</title>
+  <title>Yard Sale - Password recovery</title>
+  <link rel="shortcut icon" href="./logos/favicon_yard_sale.svg">
 	<link rel="stylesheet" href="./css/password-recovery-2.css">
 </head>
 <body>
