--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -51,7 +51,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -68,7 +68,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -85,7 +85,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -102,7 +102,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -119,7 +119,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -136,7 +136,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -153,7 +153,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -170,7 +170,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -187,7 +187,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -204,7 +204,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -221,7 +221,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -238,7 +238,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -255,7 +255,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -272,7 +272,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -289,7 +289,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -306,7 +306,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -323,7 +323,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -340,7 +340,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
@@ -357,7 +357,7 @@
 						<p class="product">Bike</p>
 					</div>
 
-					<figure class="card--cart">
+					<figure class="cart__container">
 						<img class="cart" src="./icons/bt_add_to_cart.svg" alt="Cart icon">
 					</figure>
 				</div>
