feat (cart--message): new HTML element added to show cart message.

--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -43,6 +44,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -60,6 +62,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -77,6 +80,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -94,6 +98,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -111,6 +116,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -128,6 +134,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -145,6 +152,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -162,6 +170,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -179,6 +188,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -196,6 +206,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -213,6 +224,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -230,6 +242,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -247,6 +260,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -264,6 +278,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -281,6 +296,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -298,6 +314,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -315,6 +332,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -332,6 +350,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -349,6 +368,7 @@
 			<div class="card">
 				<figure class="card--image">
 					<img class="image" src="./images/bike.jpeg" alt="Product image">
+					<div class="cart--message hidden">Removed from cart</div>
 				</figure>
 
         <div class="card--footer">
@@ -365,5 +385,7 @@
 
 		</section>
 	</main>
+
+	<script type="text/javascript" src="./js/cart-status.js"></script>
 </body>
 </html>
