feat: changes for my-order file.

--- a/my-order.html
+++ b/my-order.html
@@ -31,56 +31,57 @@
         </div>
 
         <p class="total">$ 120.00</p>
+
+        <div class="products">
+          <div class="product">
+            <div>
+              <figure class="product--image__container">
+                <img class="product--image" src="./images/bike.jpeg" alt="Product image">
+              </figure>
+
+              <p class="product--name">Bike</p>
+				    </div>
+
+            <p class="product--price">$ 30,00</p>
+			    </div>
+
+          <div class="product">
+            <div>
+              <figure class="product--image__container">
+                <img class="product--image" src="./images/bike.jpeg" alt="Product image">
+              </figure>
+
+              <p class="product--name">Bike</p>
+            </div>
+
+            <p class="product--price">$ 30,00</p>
+			    </div>
+
+          <div class="product">
+            <div>
+              <figure class="product--image__container">
+                <img class="product--image" src="./images/bike.jpeg" alt="Product image">
+              </figure>
+
+              <p class="product--name">Bike</p>
+				    </div>
+
+            <p class="product--price">$ 30,00</p>
+			    </div>
+
+          <div class="product">
+            <div>
+              <figure class="product--image__container">
+                <img class="product--image" src="./images/bike.jpeg" alt="Product image">
+              </figure>
+
+              <p class="product--name">Bike</p>
+				    </div>
+
+            <p class="product--price">$ 30,00</p>
+			    </div>
+        </div>
       </div>
-
-      <div class="product">
-        <div>
-          <figure class="product--image__container">
-            <img class="product--image" src="./images/bike.jpeg" alt="Product image">
-          </figure>
-
-          <p class="product--name">Bike</p>
-				</div>
-
-        <p class="product--price">$ 30,00</p>
-			</div>
-
-      <div class="product">
-        <div>
-          <figure class="product--image__container">
-            <img class="product--image" src="./images/bike.jpeg" alt="Product image">
-          </figure>
-
-          <p class="product--name">Bike</p>
-				</div>
-
-        <p class="product--price">$ 30,00</p>
-			</div>
-
-      <div class="product">
-        <div>
-          <figure class="product--image__container">
-            <img class="product--image" src="./images/bike.jpeg" alt="Product image">
-          </figure>
-
-          <p class="product--name">Bike</p>
-				</div>
-
-        <p class="product--price">$ 30,00</p>
-			</div>
-
-      <div class="product">
-        <div>
-          <figure class="product--image__container">
-            <img class="product--image" src="./images/bike.jpeg" alt="Product image">
-          </figure>
-
-          <p class="product--name">Bike</p>
-				</div>
-
-        <p class="product--price">$ 30,00</p>
-			</div>
-
 		</section>
 	</main> 
 </body>
