--- a/product-details.html
+++ b/product-details.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./css/product-details.css">
 </head>
 <body>
-  <nav class="menu">
+  <!--<nav class="menu">
     <figure class="menu-icon__container">
 			<img class="menu-icon" src="./icons/icon_menu.svg" alt="Menu icon">
 		</figure>
@@ -70,10 +70,10 @@
 
     	<figure class="cart__container">
 				<!--<img class="cart" src="./icons/icon_shopping_cart.svg" alt="Cart icon" >-->
-				<img class="cart" src="./icons/icon_shopping_cart_notification.svg" alt="Shopping cart icon">
+				<!--<img class="cart" src="./icons/icon_shopping_cart_notification.svg" alt="Shopping cart icon">
 			</figure>
 		</div>
-	</nav>
+	</nav> -->
 
 	<aside class="product-detail">
 		<figure class="product-image__container">
